# genesia-django-template

./: LICENSE  README.md  pyproject.toml  templates.py
app/: views.py.jinja
genesia_templates/: __init__.py  templates.py
genesia_templates/templates/django/app/: views.py.jinja
templates/django/app/: admin.py.jinja  apps.py.jinja  models.py.jinja  views.py.jinja
templates/django/{{project_name}}/: settings.py  urls.py
{{project_name}}/: settings.py  settings.py.jinja  urls.py.jinja
