[tool.poetry]
name = "genesia-templates"
version = "0.1.7"
description = "genesia templates"
authors = ["lucasmrdt <lucas.marandat@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "genesia_templates" }]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
